--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graceful-fs": "^4.1.11",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.6",
+    "gulp-connect-php": "^1.0.3",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.4.0",
