--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "jump-start",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "",
-  "main": "app/index.html",
+  "main": "pages/index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -17,19 +19,12 @@
   },
   "homepage": "https://github.com/taran-pierce/jump-start#readme",
   "devDependencies": {
-    "browser-sync": "^2.18.12",
-    "del": "^3.0.0",
-    "graceful-fs": "^4.1.11",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.6",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.2",
-    "minimatch": "^3.0.4",
-    "run-sequence": "^2.0.0"
+    "node-sass": "^4.14.1"
+  },
+  "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "next": "^10.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
